--- a/static/pdf_editor.html
+++ b/static/pdf_editor.html
@@ -5,43 +5,88 @@
     <title>PDFPILOT</title>
     <link rel="stylesheet" href="styles/style.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.4.120/pdf.min.js"></script>
+    <style>
+        .pdf-page {
+            margin-left: 220px;
+            margin-bottom: 20px;
+            border: 2px solid #b42424;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+        }
+        .titulo2 {
+            margin-left: 220px;
+            margin-top: 90px;
+        }
+    </style>
 </head>
 <body>
 
-    <!-- Título que lleva al menú -->
-    <a href="index.html" class="titulo1" title="Volver al menú">PDFPilot</a>
-
-    <!-- Contenedor lateral de herramientas -->
-    <div class="opccontenedor">
-        <div class="opcionarchivo">
-            <img src="guardar-icono.png" alt="" />
-            Guardar archivo
-        </div>
-        <div class="opcionarchivo">
-            <img src="texto-icono.png" alt="" />
-            Agregar texto
-        </div>
-        <div class="opcionarchivo">
-            <img src="resaltar-icono.png" alt="" />
-            Resaltar
-        </div>
-        <div class="opcionarchivo">
-            <img src="lapiz-icono.png" alt="" />
-            Dibujar
-        </div>
-        <div class="opcionarchivo">
-            <img src="borrar-icono.png" alt="" />
-            Eliminar elemento
-        </div>
-        <div class="opcionarchivo">
-            <img src="archivo-icono.png" alt="" />
-            Cargar nuevo PDF
-        </div>
+    <!-- Título -->
+    <div class="titulo1">
+        <h1>PDFPILOT</h1>
     </div>
 
-    <!-- Lienzo donde se mostrará el PDF -->
-    <canvas id="pdfCanvas" style="margin-left: 220px; border: 1px solid black;"></canvas>
-    
-    <script src="scripts/script.js"></script>
+    <!-- Menú lateral decorativo -->
+    <div class="opccontenedor">
+        <div class="opcionarchivo">Guardar archivo</div>
+        <div class="opcionarchivo">Agregar texto</div>
+        <div class="opcionarchivo">Resaltar</div>
+        <div class="opcionarchivo">Dibujar</div>
+        <div class="opcionarchivo">Eliminar elemento</div>
+        <div class="opcionarchivo">Cargar nuevo PDF</div>
+    </div>
+
+    <!-- Botón para subir PDF -->
+    <div class="titulo2">
+        <h2>Seleccione un archivo PDF para visualizar:</h2>
+        <input type="file" id="fileInput" accept="application/pdf">
+    </div>
+
+    <!-- Donde se muestran todas las páginas -->
+    <div id="pdfContainer"></div>
+
+    <script>
+        const input = document.getElementById("fileInput");
+        const container = document.getElementById("pdfContainer");
+
+        input.addEventListener("change", function(event) {
+            const file = event.target.files[0];
+            if (file && file.type === "application/pdf") {
+                const fileURL = URL.createObjectURL(file);
+
+                container.innerHTML = ""; // limpia el contenedor antes de mostrar uno nuevo
+
+                pdfjsLib.getDocument(fileURL).promise.then(pdf => {
+                    console.log("Total de páginas: " + pdf.numPages);
+
+                    for (let pageNumber = 1; pageNumber <= pdf.numPages; pageNumber++) {
+                        pdf.getPage(pageNumber).then(page => {
+                            const scale = 1.5;
+                            const viewport = page.getViewport({ scale });
+
+                            const canvas = document.createElement("canvas");
+                            canvas.className = "pdf-page";
+                            canvas.width = viewport.width;
+                            canvas.height = viewport.height;
+
+                            const context = canvas.getContext("2d");
+                            const renderContext = {
+                                canvasContext: context,
+                                viewport: viewport
+                            };
+
+                            page.render(renderContext);
+                            container.appendChild(canvas);
+                        });
+                    }
+                }).catch(error => {
+                    console.error("Error al mostrar el PDF:", error);
+                    alert("Error al mostrar el PDF.");
+                });
+            } else {
+                alert("Por favor selecciona un archivo PDF válido.");
+            }
+        });
+    </script>
+
 </body>
 </html>
