AddText.js added, floating text box

--- a/static/pdf_editor.html
+++ b/static/pdf_editor.html
@@ -28,7 +28,7 @@
     <!-- Menú lateral decorativo -->
     <div class="opccontenedor">
         <div class="opcionarchivo">Guardar archivo</div>
-        <div class="opcionarchivo">Agregar texto</div>
+        <div class="opcionarchivo" id="addTextBtn">Agregar texto</div>
         <div class="opcionarchivo">Resaltar</div>
         <div class="opcionarchivo">Dibujar</div>
         <div class="opcionarchivo">Eliminar elemento</div>
@@ -44,6 +44,7 @@
     <!-- Donde se muestran todas las páginas -->
     <div id="pdfContainer"></div>
 
-    <script src="scripts/script.js"></script>
+    <script src="scripts/loadpdf.js"></script>
+    <script src="scripts/addText.js"></script>
 </body>
 </html>
