--- a/static/pdf_editor.html
+++ b/static/pdf_editor.html
@@ -30,7 +30,7 @@
 
     <!-- Menú lateral decorativo -->
     <div class="opccontenedor">
-        <div class="opcionarchivo" onclick="guardarPDF()">Guardar archivo</div> <!--edit-->
+        <div class="opcionarchivo" onclick="savepdf()">Guardar archivo</div> <!--edit-->
         <div class="opcionarchivo" id="addTextBtn">Agregar texto</div>
         <div class="opcionarchivo">Resaltar</div>
         <div class="opcionarchivo">Dibujar</div>
