AddText.js minor fixes

--- a/static/pdf_editor.html
+++ b/static/pdf_editor.html
@@ -47,9 +47,9 @@
     <!-- Donde se muestran todas las páginas -->
     <div id="pdfContainer"></div>
 
+    <script src="https://unpkg.com/pdf-lib@^2.0.0/dist/pdf-lib.min.js"></script>
     <script src="scripts/loadpdf.js"></script>
     <script src="scripts/addText.js"></script>   
     <script src="scripts/savepdf.js"></script> 
-
 </body>
 </html>
